--- a/src/pages/FestivalCountdownPage/FestivalCountdownPage.css
+++ b/src/pages/FestivalCountdownPage/FestivalCountdownPage.css
@@ -335,7 +335,7 @@
 
 .task-text.completed {
   text-decoration: line-through;
-  color: #999;
+  color: #666;
   opacity: 0.7;
 }
 
