--- a/src/pages/MuhurtaFinderPage/MuhurtaFinderPage.css
+++ b/src/pages/MuhurtaFinderPage/MuhurtaFinderPage.css
@@ -553,7 +553,7 @@
 }
 
 .form-group small {
-  color: #999;
+  color: #666;
   font-size: 0.85rem;
   margin-top: 0.25rem;
 }
